k8s-manifests/deployment.yaml
#create namespace for wisecow application
---
apiVersion: v1
kind: Namespace
metadata:
  name: wisecow


#i am using aws ECR to store wisecow Application Docker image.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-app
  namespace: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow-app
  template:
    metadata:
      labels:
        app: wisecow-app
    spec:
      containers:
      - name: wisecow-app
        image: <aws-account-id>.dkr.ecr.<region>.amazonaws.com/<ecr-repo-name>:latest
        ports:
        - containerPort: 4499
