k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
spec:
  selector:
    app: wisecow-app
  ports:
  - protocol: TCP
    port: 80  
    targetPort: 4499
  - name: https
    port: 443
    targetPort: 4499
    protocol: TCP      
  type: LoadBalancer
